# pyperlessai

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  hello.py  pyproject.toml  settings.yaml
prompts/: paperless_prompt.md
src/: ai_client.py  classifier.py  paperless.py  poc.py  scheduler.py  schemas.py
