[project]
name = "pyperless-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.24.0",
    "Pillow>=10.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "openai",
    "ruff>=0.12.9",
    "pyyaml>=6.0.2",
]
